# sms_simulator

./: Dockerfile.monitor  Dockerfile.sender  README.md  docker-compose.yml  pyproject.toml  scale_sender.sh
sms_simulator/: monitor.py  producer.py  sender.py  stats.py
sms_simulator/config/: base.py  monitor_config.py  producer_config.py  sender_config.py
sms_simulator/utils/: log_formatter.py
